# bydScan

./: README.md
SaveTest/: build-profile.json5  oh-package-lock.json5  oh-package.json5  scan.js
SaveTest/AppScope/: app.json5
SaveTest/dataorm/: Index.ts  oh-package-lock.json5  oh-package.json5
SaveTest/dataorm/src/main/: module.json5
SaveTest/dataorm/src/ohosTest/: module.json5
SaveTest/echarts/: Index.ets  oh-package.json5
SaveTest/echarts/src/main/: module.json5
SaveTest/echarts/src/ohosTest/: module.json5
SaveTest/entry/: oh-package-lock.json5  oh-package.json5
SaveTest/ncnn-harmony-main/: .clangd  README.md  YOLOv4_已移除说明.md  YOLOv8_全面升级完成.md  YOLOv8_升级完成总结.md  YOLOv8_升级指南.md  build-profile.json5  convert_yolov8.py  oh-package.json5  如何获取YOLOv8模型.md  清理总结.md
SaveTest/ncnn-harmony-main/AppScope/: app.json5
SaveTest/ncnn-harmony-main/entry/: build-profile.json5  oh-package.json5
SaveTest/ncnn-harmony-main/tncnn/: oh-package.json5
SaveTest/ncnn-harmony-main/tncnn/src/main/cpp/: CMakeLists.txt  benchmark_ncnn.cpp  benchmark_ncnn.h  nanodet.cpp  nanodet.h  napi_init.cpp  yolov8.cpp  yolov8.h
SaveTest/ncnn-harmony-main/tncnn/src/main/cpp/types/libtncnn/: Index.d.ts  oh-package.json5
ScanDemo-harmony-master/: build-profile.json5  oh-package-lock.json5  test-case.md
ScanDemo-harmony-master/Scanner/: CHANGELOG.md  Index.ets  README.md  oh-package.json5
ScanDemo-harmony-master/entry/: oh-package-lock.json5
YoloTest/: OpenCV_README.md  oh-package.json5
YoloTest/AppScope/: app.json5
YoloTest/entry/: oh-package-lock.json5  oh-package.json5
YoloTest/entry/src/main/cpp/: CMakeLists.txt  add.cpp  opencv_demo.cpp  yolo_demo.cpp
YoloTest/entry/src/main/cpp/types/libadd/: oh-package.json5  package.json
YoloTest/entry/src/main/cpp/types/libopencv/: index.d.ts  oh-package.json5
YoloTest/entry/src/main/cpp/types/libyolo/: index.d.ts  oh-package.json5
my_test_classyTransfer/: build-profile.json5  oh-package-lock.json5  oh-package.json5
my_test_classyTransfer/AppScope/: app.json5
my_test_classyTransfer/classy_transfer/: Index.ets  oh-package.json5
my_test_classyTransfer/entry/: oh-package-lock.json5  oh-package.json5
ohos_dataorm-master/: CHANGELOG.md  README.md  README_zh.md  build-profile.json5  oh-package.json5
ohos_dataorm-master/entry/: oh-package.json5
(+105 files in other folders)
